--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "version": "1.0.3",
+  "name": "tu-as-l-heure",
   "repository": {
     "type": "git",
     "url": "https://github.com/dmi3y/a-que-hora"
@@ -8,7 +9,7 @@
   "fitbit": {
     "appUUID": "46c05084-af79-40f6-ba5c-a53075d2e15b",
     "appType": "clockface",
-    "appDisplayName": "¿A qué hora?",
+    "appDisplayName": "Tu as l'heure?",
     "iconFile": "resources/icon.png",
     "wipeColor": "",
     "requestedPermissions": [],
@@ -17,7 +18,7 @@
     ],
     "i18n": {
       "en": {
-        "name": "¿A qué hora?"
+        "name": "Tu as l'heure?"
       }
     }
   },
@@ -34,6 +35,6 @@
     "test": "ts-mocha -p test/tsconfig.json test/**/*spec.ts",
     "build": "fitbit-build",
     "preversion": "npm run test",
-    "postversion": "npm run build && cp build/app.fba releases/a-que-hora-${npm_package_version}.fba"
+    "postversion": "npm run build && cp build/app.fba releases/tu-as-l-heure-${npm_package_version}.fba"
   }
 }
