--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "name": "tu-as-l-heure",
   "description": "Fitbit's Versa clockface which tells time in French.",
   "repository": {
