--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "appUUID": "d534b3f3-9744-4547-a59f-38285479658f"
   },
   "devDependencies": {
-    "@fitbit/sdk": "~1.0.0",
-    "@fitbit/sdk-cli": "^1.0.0",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.10",
+    "@fitbit/sdk": "^1.0.6",
+    "@fitbit/sdk-cli": "^1.6.3",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^10.14.18",
     "fitbit-sdk-types": "^2.0.1",
     "mocha": "^5.2.0",
     "ts-mocha": "^2.0.0"
