upgrade fitbit sdk cli from next channel

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "devDependencies": {
     "@fitbit/sdk": "^3",
-    "@fitbit/sdk-cli": "^1.6.3",
     "@types/mocha": "^5",
     "@types/node": "^12",
     "fitbit-sdk-types": "^4",
@@ -37,5 +36,8 @@
     "build": "fitbit-build",
     "preversion": "npm run test",
     "postversion": "npm run build && cp build/app.fba releases/tu-as-l-heure-${npm_package_version}.fba"
+  },
+  "dependencies": {
+    "@fitbit/sdk-cli": "^1.7.0-pre.1"
   }
 }
